# infomesh

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  TERMS_OF_USE.md  docker-compose.yml  generate_og.py  llms.txt  pyproject.toml  smithery.json
.github/: copilot-instructions.ko.md  copilot-instructions.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: auto-release.yml  build-starter.yml  ci.yml  issue-auto-close.yml  issue-stale-close.yml  publish.yml
assets/diagrams/: architecture.mmd
bootstrap/: nodes.json
deploy/: docker-compose.dev.yml  docker-compose.yml  fly.toml  infomesh-update.service  infomesh-update.timer  infomesh.service  railway.json
deploy/terraform/: bootstrap.tf  main.tf
docs/: README.md
docs/en/: 01-overview.md  02-architecture.md  03-credit-system.md  04-tech-stack.md  05-getting-started.md  06-legal.md  07-trust-integrity.md  08-security-audit.md  09-console-dashboard.md  10-mcp-integration.md  11-publishing.md  12-faq.md
docs/ko/: 01-overview.md  02-architecture.md  03-credit-system.md  04-tech-stack.md  05-getting-started.md  06-legal.md  07-trust-integrity.md  08-security-audit.md  09-console-dashboard.md  10-mcp-integration.md  11-publishing.md  12-faq.md
examples/: README.md  basic_search.py  crawl_and_search.py  credit_status.py  fetch_page.py  hybrid_search.py  mcp_client.py
examples/typescript/: README.md  http_client.ts  mcp_client.ts  package.json
infomesh/: __init__.py  __main__.py  benchmarks.py  config.py  data_quality.py  db.py  diagnostics.py  dx.py  errors.py  hashing.py  plugins.py  runtime.py  scalability.py  security.py  security_ext.py  security_ops.py  services.py  shutdown.py  slo.py  types.py  version_check.py
infomesh/api/: __init__.py  extensions.py  local_api.py
infomesh/cli/: __init__.py  config.py  crawl.py  index.py  keys.py  peer.py  search.py  serve.py
infomesh/compression/: __init__.py  zstd.py
infomesh/crawler/: __init__.py  content_extract.py  crawl_loop.py  dedup.py  diff.py  parser.py  (+16 more)
k8s/: configmap.yaml  namespace.yaml  secret.yaml  service.yaml  statefulset.yaml
scripts/: build_starter.py  diag_bgm.py  diag_stability.py  infomesh-update.sh
seeds/: academic.txt  encyclopedia.txt  quickstart.txt  search-strategy.txt  tech-docs.txt
tests/: conftest.py  integration_dashboard.py  test_api_ext.py  test_attestation.py  test_audit.py  test_bootstrap.py  test_cache.py  test_cjk.py  test_cli_search.py  test_commoncrawl.py  test_compression.py  test_config.py  test_crawler.py  test_crawler_ext.py  test_credit_sync.py  test_credit_verification.py  test_credits.py  test_cross_validate.py  test_dashboard.py  test_dashboard_integration.py  test_data_quality.py  test_detector.py  test_dht.py  test_distributed.py  test_dmca.py  test_dx.py  test_e2e_mvp.py  test_enterprise_split.py  test_errors.py  test_explain.py  test_facets.py  test_farming.py  test_feedback.py  test_freshness.py  test_gdpr.py  test_github_identity.py  test_index.py  test_infrastructure.py  test_integrations.py  test_js_rendering.py  (+52 more)
(+128 files in other folders)
