[project]
name = "infomesh"
version = "0.1.6"
description = "Fully decentralized P2P search engine for LLMs via MCP"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "InfoMesh Contributors" },
]
keywords = ["search", "p2p", "llm", "mcp", "decentralized", "crawler", "index", "web-search", "mcp-server", "search-api", "free-search", "model-context-protocol", "search-engine", "web-crawler", "ai-search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: System :: Networking",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Indexing",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Typing :: Typed",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Environment :: No Input/Output (Daemon)",
]

dependencies = [
    "httpx>=0.27",
    "trafilatura>=1.12",
    "mcp>=1.0",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "msgpack>=1.0",
    "zstandard>=0.23",
    "structlog>=24.0",
    "cryptography>=43.0",
    "tomli>=2.0; python_version < '3.11'",
    "click>=8.1",
    "textual>=1.0",
    "trio>=0.22",
]

[project.optional-dependencies]
p2p = [
    "libp2p>=0.2",
]
vector = [
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
]
llm = [
    "ollama>=0.3",
]
all = [
    "infomesh[p2p,vector,llm]",
]

[project.scripts]
infomesh = "infomesh.__main__:main"

[project.urls]
Homepage = "https://github.com/dotnetpower/infomesh"
Repository = "https://github.com/dotnetpower/infomesh"
Documentation = "https://github.com/dotnetpower/infomesh/tree/main/docs"
Issues = "https://github.com/dotnetpower/infomesh/issues"
Changelog = "https://github.com/dotnetpower/infomesh/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.11",
    "httpx[http2]>=0.27",
    "libp2p>=0.2",
    "pytest-trio>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "infomesh/",
    "seeds/",
    "bootstrap/",
    "LICENSE",
    "README.md",
    "pyproject.toml",
]
exclude = ["infomesh/assets/bgm/"]

[tool.hatch.build.targets.wheel]
packages = ["infomesh"]
exclude = ["infomesh/assets/bgm/"]

[tool.hatch.build.targets.wheel.shared-data]
"seeds" = "share/infomesh/seeds"
"bootstrap" = "share/infomesh/bootstrap"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["generate_og.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
